# advent-of-code-2022

./: .editorconfig  .gitignore  Makefile  README.md  aoc.py  pyproject.toml
advent_of_code_2022/: utils.py
advent_of_code_2022/day01/: day01.py
advent_of_code_2022/day02/: day02.py
advent_of_code_2022/day03/: day03.py
advent_of_code_2022/day04/: day04.py
advent_of_code_2022/day05/: day05.py
advent_of_code_2022/day06/: day06.py
advent_of_code_2022/day07/: day07.py
advent_of_code_2022/day08/: day08.py
advent_of_code_2022/day09/: day09.py
advent_of_code_2022/day10/: day10.py
advent_of_code_2022/day11/: day11.py
advent_of_code_2022/day12/: day12.py
advent_of_code_2022/day13/: day13.py
advent_of_code_2022/day14/: day14.py
advent_of_code_2022/day15/: day15.py
advent_of_code_2022/day16/: day16.py
advent_of_code_2022/day17/: day17.py
cli/: config.py  create.py  fetch.py  main.py  run.py  utils.py
