[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Solutions for AoC 2022 + cool CLI"
authors = ["Paweł Dąbrowski <dabrowskip9@gmail.com>"]

[tool.poetry.scripts]
aoc = 'cli.main:cli'

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.28.1"
pytz = "^2022.6"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
